# rancher-ai-agent

./: .gitignore  README.md  index.yaml  openapi.yaml  pyproject.toml  sync-milestones.yml
.github/workflows/: sync-milestones.yml
app/: main.py
app/routers/: chat.py  testui.html  ui.py  websocket.py
app/services/: auth.py  memory.py
app/services/agent/: __init__.py  agent.py  base.py  builtin_agents.py  chat.py  child.py  factory.py  loader.py  parent.py  root.py  types.py
chart/agent/: values.yaml
chart/agent/templates/: ai-agent-deployment.yaml
chart/agent/templates/cert/: agent-sa.yaml
chart/agent/templates/crds/: ai.cattle.io_aiagentconfigs.yaml
crd-generation/: README.md  go.mod  go.sum
crd-generation/api/v1alpha1/: aiagentconfig_types.go  groupversion_info.go
package/: Dockerfile
tests/integration/: test_agent.py  test_multi_agent.py  test_single_agent.py
tests/unit/: test_chat.py  test_memory.py  test_websocket.py
tests/unit/routers/: test_chat.py
tests/unit/services/: test_llm.py  test_rag.py
tests/unit/services/agent/: test_base_agent.py  test_child_agent.py  test_factory.py  test_parent_agent.py  test_root_agent.py
