[project]
name = "rancher-ai-agent"
version = "0.1.0"
description = "Rancher AI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.116.1",
    "langchain>=1.0.0",
    "langchain-google-genai>=2.1.10",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.33",
    "langchain-text-splitters>=0.3.11",
    "langchain-community>=0.3.30",
    "langfuse>=3.3.4",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "mcp>=1.12.4",
    "unstructured>=0.18.15",
    "unstructured[md]>=0.18.15",
    "langchain-chroma>=1.0.0",
    "kubernetes>=34.1.0",
    "fastmcp>=2.13.1",
    "langchain-aws>=1.1.0",
    "psycopg[binary,pool]>=3.3.2",
]

[dependency-groups]
test = [
    "testcontainers>=4.13.3",
    "mock>=5.2.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
